<resources>
    <string name="app_name" translatable="false">VR720</string>
    <string name="app_introduction">一款精简的720度全景浏览软件</string>
    <string name="navigation_drawer_open">开启侧边栏</string>
    <string name="navigation_drawer_close">关闭侧边栏</string>
    <string name="nav_header_title">一款精简的 720 全景浏览软件</string>
    <string name="nav_header_subtitle" translatable="false">720 Panorama viewer on Android</string>
    <string name="nav_header_desc">导航标题</string>
    <string name="nav_header_soft">软件</string>
    <string name="nav_header_help">帮助</string>
    <string name="title_activity_settings">设置</string>
    <string name="title_activity_about">关于 VR720</string>
    <string name="title_activity_pano">查看720度全景</string>
    <string name="title_activity_feedback">提交软件反馈</string>
    <string name="title_activity_help">VR720 帮助文档</string>
    <string name="title_activity_gallery">相册</string>
    <string name="title_activity_import">导入至 VR720</string>
    <string name="title_reminder">温馨提示</string>
    <string name="title_home">我的全景图</string>
    <string name="title_gallery">分类收藏夹</string>
    <string name="title_choose_language">选择语言</string>
    <string name="action_new_gallery">新建分类收藏夹</string>
    <string name="action_import_pano">导入全景图</string>
    <string name="action_search">搜索</string>
    <string name="action_settings">设置</string>
    <string name="action_about">关于本软件</string>
    <string name="action_send_feed_back">提交建议或反馈</string>
    <string name="action_quit">退出</string>
    <string name="action_ok">确定</string>
    <string name="action_cancel">取消</string>
    <string name="action_yes">是</string>
    <string name="action_no">否</string>
    <string name="action_cancel_and_quit">取消并退出</string>
    <string name="action_delete">删除</string>
    <string name="action_sure_delete">确定删除</string>
    <string name="action_sure_clear">确定清空</string>
    <string name="action_select_all">全选</string>
    <string name="action_clear">清空列表</string>
    <string name="action_sort">排序方式</string>
    <string name="action_sort_name">名称</string>
    <string name="action_sort_date">修改日期</string>
    <string name="action_sort_create_date">创建日期</string>
    <string name="action_sort_size">文件大小</string>
    <string name="action_sort_custom">自定义排序</string>
    <string name="action_move_out_list">移出列表</string>
    <string name="action_view_file_info">查看文件信息</string>
    <string name="action_open_with_text">其他应用打开</string>
    <string name="action_share">分享</string>
    <string name="action_rename">重命名</string>
    <string name="action_delete_file">删除文件</string>
    <string name="action_back_main">返回主界面</string>
    <string name="action_open_now">立即开启</string>
    <string name="action_go_and_set">前往设置</string>
    <string name="action_help">帮助文档</string>
    <string name="action_shot">截图</string>
    <string name="action_pano_gyro">手机陀螺仪</string>
    <string name="action_add_to">添加到</string>
    <string name="action_cancel_load">取消加载</string>
    <string name="action_continue_load">继续加载</string>
    <string name="action_next_page">下一张</string>
    <string name="action_prev_page">上一张</string>
    <string name="text_tip">提示</string>
    <string name="text_warning">系统提示</string>
    <string name="text_please_wait">请稍后</string>
    <string name="text_placeholder">文字占位符</string>
    <string name="text_return">返回</string>
    <string name="text_choosed_items">已选择 %d 项</string>
    <string name="text_import_success_count">成功导入了 %d 个文件</string>
    <string name="text_import_files">选择全景文件导入</string>
    <string name="text_import_folder">从系统相册导入全景</string>
    <string name="text_how_to_import_gallery">你想如何导入这个相册？</string>
    <string name="text_import_all_images">导入相册中所有图片</string>
    <string name="text_import_to_gallery">将相册中图片导入 %s 分类收藏夹</string>
    <string name="text_show_date">显示日期</string>
    <string name="text_hide_date">隐藏日期</string>
    <string name="text_do_you_want_import_to_list">你想把这个文件导入到列表中吗？</string>
    <string name="text_import_to_list_and_do_not_remind_me_next">以后都直接导入，不需要再提醒我</string>
    <string name="text_don_not_import_to_list_and_do_not_remind_me_next">以后都不用导入</string>
    <string name="text_please_choose_item">请选择项目</string>
    <string name="text_also_delete_files">同时删除文件</string>
    <string name="text_core_init_failed">抱歉，程序出现了故障</string>
    <string name="text_your_device_dosnot_support_es20">抱歉，你的设备不支持最基础的 OpenGL ES 2.0, 本程序无法继续进行渲染</string>
    <string name="text_title">标题</string>
    <string name="text_core_ver">内核版本：</string>
    <string name="text_flow_system">跟随系统</string>
    <string name="text_copyright" translatable="false">© 2021 By imengyu All rights reserved. \n<a href="https://imengyu.top">imengyu.top</a></string>
    <string name="text_copyright_small" translatable="false">© 2021 By imengyu.top</string>
    <string name="text_enter_gallery_name">输入分类收藏夹名称</string>
    <string name="text_time_default" translatable="false">0:00</string>
    <string name="text_update_failed">更新失败</string>
    <string name="text_update_latest">已经是最新版本啦！</string>
    <string name="text_panorama_size_not_right_warning_text">您准备浏览的这张全景图看起来并不是正常比例的全景图像，继续浏览可能会导致图像变形等问题，是否继续加载？</string>
    <string name="text_panorama_size_not_right">图像不是正常比例的全景图</string>
    <string name="text_panorama_video_size_not_right_warning_text">您准备浏览的这个全景视频看起来比例并不是正常的，继续浏览可能会导致图像变形等问题，是否继续加载？</string>
    <string name="text_panorama_video_size_not_right">全景视频不是正常比例的</string>
    <string name="text_vr_mode">VR模式</string>
    <string name="text_more">更多</string>
    <string name="text_gyro">陀螺仪</string>
    <string name="text_mode_ball">球形</string>
    <string name="text_mode_little_planet">小行星</string>
    <string name="text_mode_video_ball">水晶球</string>
    <string name="text_mode_rectilinear">平面</string>
    <string name="text_mode_360_pano">360度</string>
    <string name="text_mode_source">原图</string>
    <string name="text_mode_mercator">全景</string>
    <string name="text_loading_wait">正在加载，请稍后</string>
    <string name="text_un_know_pano">未知全景文件</string>
    <string name="text_un_know_size">未知大小</string>
    <string name="text_un_know">未知</string>
    <string name="text_end">到底啦</string>
    <string name="text_press_once_more_to_quit">再按一次退出程序</string>
    <string name="text_would_you_want_clear_list">是否要清空列表？</string>
    <string name="text_all_list_will_be_clear">当前列表以及分类中的图像将会被清空，但是不会删除源文件。</string>
    <string name="text_gallery_list_will_be_clear">所选分类收藏夹的图像将会被清空，但是不会删除源文件。</string>
    <string name="text_also_delete_from_main_list">同时从主页以及其他相册中移除(不会删除源文件)</string>
    <string name="text_file_delete_count">成功删除 %d 个文件</string>
    <string name="text_open_way">打开方式</string>
    <string name="text_rename_gallery">重命名分类收藏夹</string>
    <string name="text_search_your_pano">搜索你的全景图</string>
    <string name="text_nothing_searched">什么都没搜到</string>
    <string name="text_you_can_search">您可以根据这些字段进行搜索: 文件名、修改日期、文件大小\n要根据多个关键词搜索，可以使用空格隔开</string>
    <string name="text_grid_mode">宫格模式</string>
    <string name="text_list_mode">列表模式</string>
    <string name="text_video">视频</string>
    <string name="text_all">全部</string>
    <string name="text_image">图像</string>
    <string name="text_more_actions">更多操作</string>
    <string name="text_i_new">我知道了</string>
    <string name="text_i_like_it">我喜欢</string>
    <string name="text_delete_success">删除成功</string>
    <string name="text_delete_failed">文件删除失败</string>
    <string name="text_file_info">内容信息</string>
    <string name="text_file_path">完整路径：</string>
    <string name="text_file_size">文件大小：</string>
    <string name="text_image_size">分辨率：</string>
    <string name="text_image_date">拍摄日期：</string>
    <string name="text_image_shutter_time">快门时间：</string>
    <string name="text_do_you_like_app">你喜欢 VR720 吗？</string>
    <string name="text_give_a_start_if_you_like_app">觉得不错的话就给个好评吧 ^ ^~ </string>
    <string name="text_give_a_start">软件不错，给个好评</string>
    <string name="text_bad_app">我要吐槽</string>
    <string name="text_later">以后再说</string>
    <string name="text_show_in_main">显示在主页</string>
    <string name="text_do_not_show_in_main">不显示在主页</string>
    <string name="settings_header_common">通用</string>
    <string name="settings_header_panorama">全景图浏览</string>
    <string name="settings_header_others">其他</string>
    <string name="settings_header_about">关于</string>
    <string name="settings_header_screen">屏幕</string>
    <string name="settings_header_performance">性能</string>
    <string name="settings_header_cache">缓存</string>
    <string name="settings_header_update">更新</string>
    <string name="settings_header_debug">调试</string>
    <string name="settings_header_audio">音频</string>
    <string name="settings_key_enable_full_chunks">启用完整全景图浏览</string>
    <string name="settings_summary_enable_full_chunks">在浏览较大全景图（大于4096x2048）时不会压缩而是以文件最高清晰度显示。虽然能有更清晰的效果，但这可能会增加运算量，还可能会导致您的设备电池电量消耗速度加快。</string>
    <string name="settings_key_do_not_check_pano_normal_size">不检查全景图的正常比例</string>
    <string name="settings_summary_do_not_check_pano_normal_size">如果全景图的比例不是正常的 720 度全景图，软件打开后渲染可能会出现图像变形的情况，因此软件会给出提示询问您要不要继续加载。您可以通过开启此选项禁用这个提示</string>
    <string name="settings_key_about">关于软件</string>
    <string name="settings_key_check_update">检查更新</string>
    <string name="settings_key_auto_update">自动更新软件</string>
    <string name="settings_key_go_app_store_check_update">去应用商店查看更新</string>
    <string name="settings_key_privacy_policy">隐私政策以及许可协议</string>
    <string name="settings_key_enable_drag_velocity">开启惯性拖动</string>
    <string name="settings_key_show_debug_tool">开启全景调试界面</string>
    <string name="settings_key_enable_non_fullscreen">全景页面显示状态栏</string>
    <string name="settings_key_enable_keep_screen_on">全景页面中保持屏幕常亮</string>
    <string name="settings_key_enable_view_cache">启用浏览缓存</string>
    <string name="settings_key_clear_cache">清理缓存</string>
    <string name="settings_key_enable_program_cache">启用程序缓存</string>
    <string name="settings_summary_enable_view_cache">启用全景图浏览缓存后可以加快非常大的全景图的读取速度</string>
    <string name="settings_key_enable_low_fps">降低渲染FPS</string>
    <string name="settings_summary_enable_low_fps">降低FPS可以通过减少渲染次数（0至25帧每秒）以减少电池电量损耗，但画面可能会卡顿</string>
    <string name="settings_key_enable_custom_fps">自定义渲染FPS</string>
    <string name="settings_key_custom_fps">FPS 数值</string>
    <string name="settings_key_native_log_level">内核日志记录等级</string>
    <string name="settings_key_enable_native_log">启用内核日志</string>
    <string name="settings_key_enable_exception_catch">启用错误自动反馈</string>
    <string name="settings_summary_enable_exception_catch">启用后程序可以在发生错误时抓取错误异常信息，在下次启动时传回服务器（不包含您的个人信息），以帮助我们更好的改进软件（建议开启）</string>
    <string name="settings_key_use_native_decoder">硬件解码（如果可用）</string>
    <string name="settings_summary_use_native_decoder">优先尝试使用硬件解码，如果无对应解码器或是设备不支持硬件解码，则使用软件解码</string>
    <string name="settings_key_loop_play_video">循环播放视频</string>
    <string name="settings_key_double_click_play_pause">双击屏幕时</string>
    <string name="settings_summary_double_click_play_pause">双击屏幕时自动暂停/播放视频</string>
    <string name="settings_summary_play_pause_when_headset_state_changed">拔出/插入耳机时暂停/播放视频</string>
    <string name="settings_key_play_pause_when_headset_state_changed">耳机插入和拔出</string>
    <string name="settings_key_vol_up">音量增强</string>
    <string name="settings_summary_vol_up">如果声音太低，软件可尝试增强音量至200%</string>
    <string name="text_agreement_devinfo">设备信息</string>
    <string name="text_agreement_devinfo_sub">包括设备ID/屏幕尺寸/操作系统/设备型号/网络连接模式/移动国家代码/屏幕分辨率及系统语言；用于根据不同的设备及系统版本来提供不同的功能和体验，获取产品的使用情况及Bug信息，帮助我们不断改进产品功能和体验。</string>
    <string name="text_agreement_interenet">网络</string>
    <string name="text_agreement_interenet_sub">包括IP地址；我们需要联网下载计算数据；以及帮助我们统计产品使用情况、反馈产品BUG，帮助我们不断改进产品功能和体验。</string>
    <string name="text_agreement_write_storage">读写存储</string>
    <string name="text_agreement_write_storage_sub">我们需要临时写入程序数据、程序计算缓存等等。</string>
    <string name="text_agreement_allow">同意并继续</string>
    <string name="text_agreement_not_allow">不同意并退出</string>
</resources>