<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.imengyu.vr720.activity.GalleryActivity">

    <item
        android:id="@+id/action_import_pano"
        android:title="@string/action_import_pano" />

    <item
        android:id="@+id/action_rename"
        android:title="@string/text_rename_gallery" />

    <item
        android:id="@+id/action_sort"
        android:title="@string/action_sort" >

        <menu>
            <item
                android:id="@+id/action_sort_name"
                android:title="@string/action_sort_name" />
            <item
                android:id="@+id/action_sort_date"
                android:title="@string/action_sort_date" />
            <item
                android:id="@+id/action_sort_size"
                android:title="@string/action_sort_size" />
        </menu>

    </item>

    <item
        android:id="@+id/action_list_mode"
        android:title="@string/text_grid_mode" />
    <item
        android:id="@+id/action_show_hide_date"
        android:title="@string/text_show_date" />
    <item
        android:id="@+id/action_show_in_main"
        android:title="@string/text_show_in_main" />
    <item
        android:id="@+id/action_hide_in_main"
        android:title="@string/text_do_not_show_in_main" />


</menu>