<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/action_clear"
        android:title="@string/action_clear" />
    <item
        android:id="@+id/action_sort"
        android:title="@string/action_sort" >

        <menu>
            <item
                android:id="@+id/action_sort_name"
                android:title="@string/action_sort_name" />
            <item
                android:id="@+id/action_sort_date"
                android:title="@string/action_sort_date" />
            <item
                android:id="@+id/action_sort_size"
                android:title="@string/action_sort_size" />
        </menu>

    </item>
    <item
        android:id="@+id/action_list_mode"
        android:title="@string/text_grid_mode" />
    <item
        android:id="@+id/action_show_hide_date"
        android:title="@string/text_show_date" />
</menu>
