<!--
  ~ Copyright 2018 The app Open Source Project
  ~
  ~ Licensed under the Apache License, Version 2.0 (the "License");
  ~ you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~
  ~      http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License.
  -->

<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    app:iconSpaceReserved="false">

    <PreferenceCategory
        app:iconSpaceReserved="false"
        app:title="@string/settings_header_common">

        <SwitchPreferenceCompat
            app:defaultValue="true"
            app:iconSpaceReserved="false"
            app:key="calc_auto_update"
            app:title="@string/settings_key_auto_update" />

        <Preference
            app:title="@string/settings_key_check_update"
            app:iconSpaceReserved="false"
            app:key="app_check_update" />

    </PreferenceCategory>

    <PreferenceCategory
        app:iconSpaceReserved="false"
        app:title="@string/settings_header_panorama">

        <SwitchPreferenceCompat
            app:iconSpaceReserved="false"
            app:key="enable_full_chunks"
            app:title="@string/settings_key_enable_full_chunks"
            app:summary="@string/settings_summary_enable_full_chunks" />

        <SwitchPreferenceCompat
            app:iconSpaceReserved="false"
            app:key="enable_drag_velocity"
            app:title="@string/settings_key_enable_drag_velocity" />

    </PreferenceCategory>

    <PreferenceCategory
        app:iconSpaceReserved="false"
        app:title="@string/settings_header_others">



    </PreferenceCategory>

    <PreferenceCategory
        app:iconSpaceReserved="false"
        app:title="@string/settings_header_about">

        <Preference
            app:title="@string/settings_key_about"
            app:iconSpaceReserved="false"
            app:key="app_about" />


        <Preference
            app:title="@string/settings_key_privacy_policy"
            app:iconSpaceReserved="false"
            app:key="app_privacy_policy" />

    </PreferenceCategory>


</PreferenceScreen>
