<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/action_settings"
        android:orderInCategory="100"
        android:title="@string/action_settings"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_clear"
        android:title="@string/action_clear" />
    <item
        android:id="@+id/action_sort"
        android:title="@string/action_sort" >

        <menu>
            <item
                android:id="@+id/action_sort_name"
                android:title="@string/action_sort_name" />
            <item
                android:id="@+id/action_sort_date"
                android:title="@string/action_sort_date" />
            <item
                android:id="@+id/action_sort_size"
                android:title="@string/action_sort_size" />
        </menu>

    </item>

</menu>
