<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/action_new_gallery"
        android:title="@string/action_new_gallery" />
    <item
        android:id="@+id/action_sort"
        android:title="@string/action_sort" >

        <menu>
            <item
                android:id="@+id/action_sort_name"
                android:title="@string/action_sort_name" />
            <item
                android:id="@+id/action_sort_date"
                android:title="@string/action_sort_date" />
            <item
                android:id="@+id/action_sort_custom"
                android:title="@string/action_sort_custom" />
        </menu>

    </item>

</menu>
